--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -82,9 +82,22 @@ jobs:
         run: |
           BRANCH_NAME="deploy-dn-fe-${{ github.event.inputs.environment }}-${{ github.run_id }}"
           gh pr create \
-            --title "Deploy FE to ${{ github.event.inputs.environment }}: update image tag to ${{ steps.set_image_tag.outputs.image_tag }} and bump Chart version" \
-            --body "Automatically created PR to update helm manifests with the new image tag." \
+            --title "Deploy FE to ${{ github.event.inputs.environment }}: update image tag to ${{ steps.set_image_tag.outputs.image_tag }} and bump Chart version. RunId: ${{ github.run_id }}" \
+            --body "Automatically created PR to update helm manifests with the new image tag. @coderabbitai ignore" \
             --base main --head $BRANCH_NAME
+        env:
+          GITHUB_TOKEN: ${{ secrets.CD_GITHUB_TOKEN }}
+
+      - name: Merge Pull Request using gh
+        working-directory: cd
+        run: |
+          PR_NUMBER=$(gh pr list --head "deploy-dn-fe-dev-${{ github.run_id }}" --json number --jq '.[0].number')
+          if [ -z "$PR_NUMBER" ]; then
+            echo "No PR found for branch deploy-dn-fe-dev-${{ github.run_id }}. Exiting."
+            exit 1
+          fi
+          echo "Merging PR #$PR_NUMBER"
+          gh pr merge $PR_NUMBER --squash --delete-branch
         env:
           GITHUB_TOKEN: ${{ secrets.CD_GITHUB_TOKEN }}
 
