--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -23,6 +23,7 @@ jobs:
         id: slack-init
         uses: slackapi/slack-github-action@v2.0.0
         with:
+          token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
             {
               "text": "*Deployment In Progress*\nStarting deployment of DN FE to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}.\nTriggered by: <https://github.com/${{ github.actor }}|${{ github.actor }}>\nInitializing build process...",
@@ -60,6 +61,7 @@ jobs:
       - name: Update Slack notification with image tag
         uses: slackapi/slack-github-action@v2.0.0
         with:
+          token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
             {
               "text": "*Deployment In Progress*\nStarting deployment of DN FE to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}.\nTriggered by: <https://github.com/${{ github.actor }}|${{ github.actor }}>\nImage Tag: `${{ needs.build-and-publish.outputs.image_tag }}`\nUpdating Helm manifests...",
