--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -29,7 +29,8 @@ jobs:
             {
               "text": "*Deployment In Progress*\nStarting deployment of DN FE to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}.\nTriggered by: <https://github.com/${{ github.actor }}|${{ github.actor }}>\nInitializing build process...",
               "channel": "${{ secrets.SLACK_DEPLOY_STAGE_CHANNEL }}",
-              "unfurl_links": false
+              "unfurl_links": false,
+              "unfurl_media": false
             }
 
       - name: Extract Slack message info
@@ -73,7 +74,8 @@ jobs:
               "text": "*Deployment In Progress*\nStarting deployment of DN FE to ${{ github.event.inputs.environment == 'dev' && 'DEV' || 'TEST' }}.\nTriggered by: <https://github.com/${{ github.actor }}|${{ github.actor }}>\nImage Tag: `${{ needs.build-and-publish.outputs.image_tag }}`\nUpdating Helm manifests...",
               "channel": "${{ needs.notify-start.outputs.slack_channel }}",
               "thread_ts": "${{ needs.notify-start.outputs.slack_ts }}",
-              "unfurl_links": false
+              "unfurl_links": false,
+              "unfurl_media": false
             }
 
       - name: Checkout CD repository
